feat: replace List with Set in subTasks Epic class